# google-apis-rs

./: Cargo.toml  README.md
demos/async-std/: Cargo.toml
demos/async-std/src/: iap_verify_product.rs  iap_verify_subscription.rs
google-admob-rest/: Cargo.toml
google-androidpublisher-rest/: Cargo.toml  README.md
google-androidpublisher-rest/demo/: Cargo.toml
google-androidpublisher-rest/demo/src/: verify_purchases_product.rs  verify_purchases_subscription.rs
google-androidpublisher-rest/src/v3/: mod.rs
google-androidpublisher-rest/src/v3/purchases_subscriptions/: mod.rs
google-androidpublisher-rest/src/v3/purchases_subscriptions/methods/: get.rs  mod.rs
google-androidpublisher-rest/src/v3/purchases_subscriptions/resources/: mod.rs  subscription_purchase.rs
google-androidpublisher-rest/src/v3/resources/: method_common.rs  mod.rs
google-androidpublisher-rest/src/v3/resources/purchases_products/: mod.rs  product_purchase.rs
google-androidpublisher-rest/src/v3/resources/purchases_products/methods/: get.rs
google-androidpublisher-rest/src/v3/resources/purchases_subscriptions/: mod.rs  subscription_purchase.rs
google-androidpublisher-rest/src/v3/resources/purchases_subscriptions/methods/: get.rs
google-androidpublisher-rest/src/v3/types/: mod.rs  price.rs  purchases_kind.rs
google-androidpublisher-rest/tests/: purchases_subscriptions_get_response_body_json_files.rs
google-androidpublisher-rest/tests/response_body_files/: err__400.json  err__404.json
google-appengine-rest/: Cargo.toml
google-cloud-vision-rest/: Cargo.toml  README.md
google-cloud-vision-rest/demo/: Cargo.toml
google-cloud-vision-rest/demo/src/: detect_labels.rs
google-cloud-vision-rest/src/: lib.rs
google-cloud-vision-rest/src/shared_types/: lat_lng.rs  mod.rs
google-cloud-vision-rest/src/v1/: mod.rs
google-cloud-vision-rest/src/v1/resources/: method_common.rs  mod.rs
google-cloud-vision-rest/src/v1/resources/images/methods/: annotate.rs
google-cloud-vision-rest/src/v1/resources/projects/locations/products/: mod.rs
google-cloud-vision-rest/src/v1/resources/projects_locations_products_reference_images/: bounding_poly.rs  mod.rs
google-cloud-vision-rest/src/v1/types/: annotate_image_request.rs  annotate_image_response.rs  batch_annotate_images_response.rs  feature.rs  image_context.rs  mod.rs
google-cloud-vision-rest/tests/response_body_files/: err__401.json  images_annotate_ok.json
google-oauth2/: Cargo.toml
google-rest-client/: Cargo.toml
google-rest-client/src/: lib.rs
google-rest-endpoint/: Cargo.toml
google-rest-isahc-client/: Cargo.toml
google-rest-isahc-client/src/: lib.rs
google-rest-resource-method/: Cargo.toml
google-rest-resource-method/src/: lib.rs  response_body.rs
