[package]
name = "google-cloud-vision-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
google-rest-resource-method = { path = "../google-rest-resource-method", version = "0.1", default-features = false, features = [] }

serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
base64 = { version = "0.13", default-features = false, features = ["std"]}

thiserror = { version = "1.0", default-features = false }
