[package]
name = "google-cloud-vision-rest"
version = "0.1.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Google Cloud Vision API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/google-apis-rs"
homepage = "https://github.com/bk-rs/google-apis-rs"
documentation = "https://docs.rs/google-cloud-vision-rest"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
base64 = { version = "0.21", default-features = false, features = ["std"]}

thiserror = { version = "1", default-features = false }
