[package]
name = "google-rest-client"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[dependencies]
google-rest-endpoint = { path = "../google-rest-endpoint", version = "0.1", default-features = false, features = [] }

async-trait = { version = "0.1", default-features = false, features = [] }
