[package]
name = "google-rest-isahc-client"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[dependencies]
google-rest-client = { path = "../google-rest-client", version = "0.1", default-features = false, features = [] }

isahc = { version = "0.9", default-features = false, features = [] }
futures-lite = { version = "1.0", default-features = false, features = ["std"] }
