[package]
name = "googleapis-demo-async-std"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "iap_verify_subscription"
path = "src/iap_verify_subscription.rs"

[dependencies]
google-androidpublisher-rest = { path = "../../google-androidpublisher-rest", version = "0.1" }
google-rest-isahc-client = { path = "../../google-rest-isahc-client", version = "0.1" }

async-std = { version = "1.6", default-features = false, features = ["default", "attributes"] }
