[package]
name = "googleapis-demo-async-std"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "iap_verify_subscription"
path = "src/iap_verify_subscription.rs"

[[bin]]
name = "iap_verify_product"
path = "src/iap_verify_product.rs"

[dependencies]
google-androidpublisher-rest = { path = "../../google-androidpublisher-rest", version = "0.1" }

http-api-isahc-client = { version = "0.2" }

async-std = { version = "1.6", default-features = false, features = ["default", "attributes"] }
