[package]
name = "google-cloud-vision-rest-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "google_cloud_vision_rest_detect_labels"
path = "src/detect_labels.rs"

[dependencies]
google-cloud-vision-rest = { path = "..", version = "^0.1" }

http-api-isahc-client = { version = "0.2" }

futures-lite = { version = "1.11" }
pretty_env_logger = { version = "0.4" }
